<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Kenga Services</string>
    <string name="services_notice">Kenga Services provides database, file access, and data synchronization services to Community TB and Kenga Survey.</string>
    <string name="action_admin_settings">Admin Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sync">Sync</string>
    <string name="action_change_user">Change User/Logout</string>
    <string name="action_resolve_conflict">Resolve Conflicts</string>
    <string name="action_verify_server_settings">Update User Permissions</string>
    <string name="all_conflicts_notice">Please wait - scanning for conflicts&#8230;</string>
    <string name="all_tables_scanned_for_conflicts">All tables have been scanned for conflicts</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="take_local">Take Local Version</string>
	<string name="take_server">Take Server Version</string>
	<string name="mark_resolved">Mark Resolved</string>
	<string name="resolve_cannot_complete_message">A value has not been chosen for every conflicting column. The row cannot be resolved.</string>
	<string name="conflict_local_was_deleted_explanation">You have deleted a row someone else has edited.</string>
	<string name="conflict_server_was_deleted_explanation">Another user has deleted a row you have edited.</string>
    <string name="conflict_resolve_or_choose">Another user has edited the same row you have edited.</string>
	<string name="radio_button_message_restore_local_deleted">Restore and resolve.</string>
	<string name="radio_button_message_delete_local_deleted">Ignore changes, delete on server.</string>
	<string name="radio_button_message_restore_server_deleted">Restore and resolve.</string>
	<string name="radio_button_message_delete_server_deleted">Delete and lose local changes.</string>
    <string name="conflict_take_local_warning">Overwrite all server changes with the local changes?</string>
    <string name="conflict_take_server_warning">Overwrite all local changes with the server changes?</string>
    <string name="conflict_take_local_with_deltas_warning">Overwrite local and server changes with the selected values?</string>
	<string name="conflict_delete_local_confirmation_warning">Delete the row and lose your local changes?</string>
	<string name="conflict_delete_on_server_confirmation_warning">Delete row on server?</string>
	<string name="checkpoint_restore_complete_or_take_newest">Restore to earlier Finalized state or Save checkpoint as Incomplete</string>
	<string name="checkpoint_restore_incomplete_or_take_newest">Restore to previous Incomplete Save or Save checkpoint as Incomplete</string>
	<string name="checkpoint_remove_or_take_newest">Discard or Save checkpoint as Incomplete</string>
    <string name="select_checkpoint_to_resolve">Select the row with checkpoints to resolve</string>
    <string name="no_items_display_checkpoints">Please wait&#8230;\nSearching for checkpoint rows to resolve.</string>
    <string name="checkpoint_take_all_oldest_or_remove">Discard All Checkpoints</string>
    <string name="checkpoint_take_all_newest">Update All Checkpoints to Incomplete State</string>
    <string name="silently_resolved_single_checkpoint">A checkpoint on an unmodifiable row was
        silently rolled back.</string>
    <string name="silently_resolved_checkpoints">%1$d checkpoints on unmodifiable rows were
        silently rolled back.</string>
    <string name="checkpoint_radio_local">Apply:</string>
    <string name="checkpoint_radio_server">Restore:</string>
    <string name="checkpoint_take_oldest">Discard Checkpoint</string>
	<string name="checkpoint_take_oldest_remove">Discard</string>
	<string name="checkpoint_take_oldest_finalized">Restore to prior Finalized State</string>
	<string name="checkpoint_take_oldest_incomplete">Restore to prior Incomplete State</string>
	<string name="checkpoint_take_newest">Apply all changes and Save as Incomplete</string>
    <string name="checkpoint_take_newest_with_deltas">Apply Indicated Changes and Save as Incomplete</string>
	<string name="checkpoint_delete_warning">Delete entirely?</string>
	<string name="checkpoint_take_oldest_warning">Discard the Checkpoint and Proceed?</string>
	<string name="checkpoint_take_newest_warning">Save all changes as Incomplete and Proceed?</string>
    <string name="checkpoint_take_newest_with_deltas_warning">Apply Indicated Changes, Save as Incomplete and Proceed?</string>
    <string name="checkpoint_auto_apply">No user-defined field differences &#8212; automatically discarding checkpoint.</string>
    <string name="checkpoint_auto_apply_all">No user-defined field differences in any rows\nAutomatically discarded checkpoints.</string>
    <string name="select_conflict_to_resolve">Select the row with conflicts to resolve</string>
    <string name="no_items_display_conflicts">Please Wait&#8230;\nSearching for conflicting rows to resolve.</string>
    <string name="conflict_take_all_local_updates">Take Local Version - Reject All Server Changes</string>
    <string name="conflict_take_all_server_updates">Take Server Version - Discard Local Changes</string>
    <string name="silently_resolved_single_conflict">A conflict on an unmodifiable row was
        silently resolved using the server\'s changes.</string>
    <string name="silently_resolved_conflicts">%1$d conflicts on unmodifiable rows were silently
        resolved using the server\'s changes.</string>
    <string name="conflict_resolving_all">Resolving All Conflicts</string>
    <string name="resolving_row_n_of_m">Resolving row %1$d of %2$d</string>
    <string name="resolver_already_active">Action already in progress</string>
    <string name="done_resolving_rows">Completed</string>
    <string name="conflict_radio_local">Local:</string>
    <string name="conflict_radio_server">Server:</string>
	<string name="conflict_take_local_updates">Take Local Version</string>
	<string name="conflict_take_server_updates">Take Server Version</string>
	<string name="conflict_take_local_with_deltas">Merge Changes as Indicated Below</string>
	<string name="conflict_restore_with_server_changes">Restore local record with server updates</string>
	<string name="conflict_restore_with_local_changes">Restore server record with local updates</string>
	<string name="conflict_enforce_local_delete">Delete record on server</string>
	<string name="conflict_apply_delete_from_server">Delete local record</string>
    <string name="conflict_auto_apply">No user-defined field differences &#8212; automatically taking server metadata revisions.</string>
    <string name="conflict_auto_apply_all">No user-defined field differences in any rows.\nAutomatically took server revisions.</string>
    <string name="conflict_database_consistency_error">Database consistency issue when resolving conflicts &#8212; contact the ODK Team</string>
    <string name="resolve_row_display_name">Form: %1$s Instance: %2$s</string>
    <string name="sync_notification_channel_name">Sync Notification (%1$s)</string>
    <string name="sync_ticker">Kenga Services Syncing</string>
    <string name="sync_foreground_text">Kenga Services is syncing an Application</string>
    <string name="sync_in_progress">Syncing in progress&#8230;</string>
    <string name="sync_app_level_files">Syncing application configuration&#8230;</string>
    <string name="sync_table_level_files">Syncing table and form configuration&#8230;</string>
    <string name="sync_row_data">Syncing data&#8230;</string>
    <string name="sync_communications_error">A communications error occurred</string>
    <string name="sync_device_internal_error">An internal error occurred</string>
    <string name="sync_resync_because_config_reset_error">The server config was reset during this sync. Please restart.</string>
    <string name="sync_user_authorization_failure">User authorization failure</string>
    <string name="sync_server_configuration_failure">Server configuration failure</string>
    <string name="sync_device_configuration_failure">Device configuration failure</string>
    <string name="sync_conflicts_need_resolving">Conflicts detected</string>
    <string name="sync_conflicts_text">Other users have modified the same entries that you have.\nYou now will be directed to merge your changes with theirs.</string>
    <string name="sync_successful">Sync successful</string>
    <string name="sync_successful_text">Success! Your application content (data and configuration) matches that on the server.</string>
    <string name="sync_complete_pending_attachments">Sync (without attachments) successful</string>
    <string name="sync_complete_pending_attachments_text">Configuration and data have been sync\'d, but not all attachments have been sync\'d. Most common reasons include:\n\t-You or another user elected not to fully sync attachments\n\t-There was a problem transferring the files</string>
    <string name="sync_starting">Starting sync&#8230;</string>
    <string name="sync_getting_app_level_manifest">Retrieving list of application files from server.</string>
    <string name="sync_uploading_local_file">Uploading %1$s to server.</string>
    <string name="sync_deleting_file_on_server">Deleting %1$s on server.</string>
    <string name="sync_verifying_local_file">Verifying %1$s matches version on server.</string>
    <string name="sync_deleting_local_file">Deleting %1$s on device.</string>
    <string name="sync_getting_table_manifest">Retrieving list of %1$s files from server.</string>
    <string name="sync_table_data_sync_complete">Completed sync of %1$s dataset with server.</string>
    <string name="sync_table_data_sync_skipped">Skipped sync of %1$s dataset (syncing config failed).</string>
    <string name="sync_table_data_sync_pending_attachments">Partially completed sync of %1$s dataset with server. Not all attachments synced.</string>
    <string name="sync_table_data_sync_with_conflicts">Partially completed sync of %1$s dataset with server. Resolve conflicts and resync.</string>
    <string name="sync_table_contains_checkpoints">Checkpoints must be resolved before sync can proceed.</string>
    <string name="sync_table_erroneous_filter">Internal error when querying database.</string>
    <string name="sync_table_erroneous_conflict_type">Internal error when resolving server data against locally conflicting row.</string>
    <string name="sync_verifying_app_name_on_server">Verifying server supports this user application name.</string>
    <string name="sync_obtaining_user_permissions_from_server">Retrieving user permissions from server.</string>
    <string name="sync_retrieving_tables_list_from_server">Retrieving list of tables from server.</string>
    <string name="sync_verifying_table_schema_on_server">Verifying %1$s schema matches that on server.</string>
    <string name="sync_creating_local_table">Creating %1$s&#8230;</string>
    <string name="sync_dropping_local_table">Deleting %1$s from device&#8230;</string>
    <string name="sync_table_level_file_sync_complete">Completed sync of all %1$s configuration files.</string>
    <string name="sync_table_level_sync_failed">Failed table %1$s configuration sync.</string>
    <string name="sync_server_url">Server URL:</string>
    <string name="verify_server_settings_start">Verify User Permissions</string>
    <string name="install_tables_label">Install Community TB</string>
    <string name="install_forms_label">Install Kenga Survey</string>
    <string name="install_IO_label">Install IO File Manager</string>
    <string name="username">Username:</string>
    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="open_everflow">Open Community TB</string>
</resources>