<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.opendatakit.services.MainActivity">

  <!--  <item
        android:id="@+id/action_sync"
        android:orderInCategory="10"
        android:icon="@drawable/ic_cached_black_24dp"
        android:title="@string/action_sync"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_verify_server_settings"
        android:orderInCategory="20"
        android:icon="@drawable/ic_verified_user_black_24dp"
        android:title="@string/action_verify_server_settings"
        app:showAsAction="ifRoom" />-->

  <item
          android:id="@+id/menu_table_home"
          android:icon="@drawable/ic_home_black_24dp"
          android:title="@string/home"
          app:showAsAction="always" />

  <item
          android:id="@+id/menu_table_manager_sync"
          android:icon="@drawable/ic_cached_black_24dp"
          android:title="@string/sync"
          app:showAsAction="always" />

    <item
        android:id="@+id/action_resolve_conflict"
        android:orderInCategory="30"
        android:icon="@drawable/ic_error_outline_black_24dp"
        android:title="@string/action_resolve_conflict"
        app:showAsAction="ifRoom" />

  <item
          android:id="@+id/action_change_user"
          android:orderInCategory="50"
          android:icon="@drawable/ic_person_black_24dp"
          android:title="@string/action_change_user"
          app:showAsAction="always" />

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="50"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            app:showAsAction="ifRoom" />
<!--
    <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/action_about"
            app:showAsAction="never" />-->

</menu>
