<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:id="@+id/sync_uri_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="@string/sync_server_url"/>

    <TextView
            android:id="@+id/sync_uri_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>

    <TextView
            android:id="@+id/sync_account_auth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="@string/username"/>

    <TextView
            android:id="@+id/sync_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:textStyle="bold"/>


    <Button
        android:id="@+id/verify_server_settings_start_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        style="@style/Widget.AppCompat.Button"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify_server_settings_start"/>
    <Button
            android:id="@+id/install_IO_button"
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Button"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/install_IO_label"/>

    <Button
            android:id="@+id/install_tables_button"
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Button"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/install_tables_label"/>

    <Button
            android:id="@+id/install_survey_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/Widget.AppCompat.Button"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/install_forms_label"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    <Button
            android:id="@+id/open_everflow"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:visibility="gone"
            android:text="@string/open_everflow"/>

    </LinearLayout>

</ScrollView>
